devopsdemo1/quotes-back/app/overlays/prod/gateway.yaml
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app
  labels:
    env: prod
    gateway: app
spec:
  hostnames:
#  - "app.prod.gabrielbechara.com"
  - "app.prod.qwiklabs-gcp-03-1200b28ed2d1.gabrielbechara.demo.altostrat.com"
  parentRefs:
  - name: app
  rules:
  - backendRefs:
    - name: app-prod
      port: 8080
    matches:
    - path:
        value: /
